# OtusSixthTask

./: .travis.yml  CMakeLists.txt  main.cpp
